# jax-pdf

./: .gitignore  404.html  AGENTS.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
api/: index.html
distributions/: index.html
docs/: api.md  banana.md  distributions.md  double_well.md  dw4.md  index.md  lennard_jones.md  lgcp.md  muller_brown.md  neal_funnel.md  phi_four.md
examples/: double_well_density.py  log_gaussian_pine.ipynb  muller_brown_potential.py
jax_pdf/: __init__.py  banana.py  cox_process_utils.py  double_well.py  dw4.py  lennard_jones.py  log_gauss_pines.py  muller_brown.py  neal_funnel.py  phi_four.py
search/: search_index.json
src/jax_pdf/: __init__.py  banana.py  cox_process_utils.py  log_gauss_pines.py  neal_funnel.py
tests/: test_banana.py  test_distributions.py  test_double_well.py  test_dw4.py  test_interface.py  test_lennard_jones.py  test_lgcp.py  test_muller_brown.py  test_neal_funnel.py  test_phi_four.py
