[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jax-pdf"
version = "0.1.0"
description = "Probability density functions for MCMC and variational inference testing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/jax_pdf"]
